# CPUPathTracer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README_zh-CN.md  aabb.h  bvh.h  camera.h  color.h  constant.h  constant_medium.h  displacement.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  obj_instance.h  obj_model.cpp  obj_model.h  onb.h  path_sampling.h  pdf.h  perlin.h  quad.h  ray.h  rtw_stb_image.cpp  rtw_stb_image.h  rtweekend.h  scenes.h  sphere.h  texture.h  triangle.h  vec3.h
models/cube/: cube.mtl
tests/: bump_test.cpp  bvh_test.cpp  displacement_test.cpp  normal_map_test.cpp  obj_model_test.cpp  participating_medium_test.cpp  path_sampling_test.cpp  pdf_test.cpp  texture_test.cpp  triangle_test.cpp
tests/fixtures/: two_materials.mtl
